Fixed email and pass inputs with vertical-align, margin, and removed width

--- a/css/style.css
+++ b/css/style.css
@@ -272,13 +272,14 @@ fieldset.sign-in-card {
 }
 
 .sign-in-card label, .sign-in-card input {
-    display: block;
+    /*display: block;*/
+    vertical-align: middle;
 }
 
 .sign-in-email, .sign-in-pass {
-    width: 100%;
+    /*width: 100%;*/
     height: 62.2px;
-    margin: 15px 5px;
+    margin: 15px 15px;
 }
 
 .sign-in-email .user-email, .sign-in-pass .user-pass {
